{
    "name": "BasicInput",
    "maps": [
        {
            "name": "Player",
            "id": "872272ec-4a51-4d9a-9008-678c693c890b",
            "actions": [
                {
                    "name": "Keyboard_Movement",
                    "type": "PassThrough",
                    "id": "e97bb92c-44e9-4820-9f37-ed2ed9d67964",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "28cc0279-cd2f-477a-b5f2-b3fd32d63113",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Keyboard_Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "b94d525c-30a3-454f-b46a-669780f19525",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Keyboard_Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "9d8b36a3-f1b5-4f46-8697-f29a2266a015",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Keyboard_Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "1dd05428-ce47-4da7-86ee-34119afd9921",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Keyboard_Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "9d30064b-1da6-41b9-9ddf-e5e7f3eea104",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Keyboard_Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}